# rust-crud-api

./: Cargo.toml
migrations/: 20231219081336_init.down.sql  20231219081336_init.up.sql
src/: config.rs  jwtauth.rs  main.rs  route.rs
src/api/category/: category_handler.rs  category_model.rs  category_route.rs  mod.rs
src/api/items/: item_handler.rs  item_model.rs  item_route.rs  mod.rs
src/api/user/: mod.rs  user_handler.rs  user_model.rs  user_response.rs  user_route.rs
