[package]
name = "rust-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.0", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "bigdecimal",
] }
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
bigdecimal = "0.4.1"
